# LiteAeroSim

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  conanfile.txt  cspell.json  run_sim.sh
.claude/: settings.local.json
.claude/commands/: algo.md  arch.md  design.md  impl.md  roadmap.md  schema.md
configs/: general_aviation_ksba.json  jet_trainer_ksba.json  small_uas_ksba.json  small_uas_ksba_flight.json  test_axis_prism.json  test_axis_prism_pitch30.json  test_axis_prism_roll30.json  test_axis_prism_roll75_pitch30.json  test_axis_prism_yaw30.json
docs/: README.md
docs/algorithms/: aerodynamics.md  air_data.md  equations_of_motion.md  filters.md  integration.md
docs/architecture/: aero_coeff_estimator.md  aero_coefficient_model.md  aircraft.md  control_interface_review.md  defect_kinematic_attitude_model.md  dynamic_block.md  dynamic_element.md  environment.md  eom_implementation_roadmap.md  flow_angles_estimator.md  godot_plugin.md  landing_gear.md  live_sim_view.md  logger.md  manual_input.md  navigation_filter.md  overview.md  post_processing.md  propulsion.md  propulsion_coeff_estimator.md  python_bindings.md  sensor.md  sensor_air_data.md  sensor_gnss.md  sensor_ins_sim.md  sensor_laser_alt.md  sensor_mag.md  sim_runner.md  terrain.md  terrain_build.md  wind_estimator.md
docs/defects/: defect_kinematic_attitude_model.md
docs/dependencies/: README.md
docs/design/: README.md  landing_gear.md
docs/examples/: siso_elements.md
docs/guidelines/: cpp.md  general.md  python.md
docs/implementation/: PLANS.md  aircraft_serialization.md  equations_of_motion.md  landing_gear_dynamics.md
docs/installation/: README.md
docs/roadmap/: README.md  aircraft.md  equations_of_motion.md  flight-history-repair.md  flight_code.md  flightcode-migration-plan.md  liteaero-flight-migration-plan.md  terrain-implementation-plan.md
docs/schemas/: aircraft_config_v1.md
docs/testing/: strategy.md
godot/addons/liteaero_sim/src/: CMakeLists.txt  SimulationReceiver.cpp  SimulationReceiver.hpp
godot/scenes/: World.tscn
include/: Aircraft.hpp  KinematicState.hpp  SimulationFrame.hpp  numerics.hpp
include/Aerodynamics/: AeroPerformance.hpp
include/Airframe/: AirframePerformance.hpp
include/Control/: Filter.hpp  FilterFIR.hpp  FilterSS.hpp  FilterSS2.hpp  FilterTF.hpp  SISOBlock.hpp  SISOFilter.hpp  SISOLimit.hpp  Unwrap.hpp  control.hpp  filter_realizations.hpp
include/Math/: math_util.hpp
include/Navigation/: WGS84.hpp
include/Structure/: Inertia.hpp  StructPerformance.hpp
include/aerodynamics/: AeroCoeffEstimator.hpp  AeroPerformance.hpp  AircraftGeometry.hpp  LiftCurveModel.hpp  LoadFactorAllocator.hpp
include/airframe/: AirframePerformance.hpp  Inertia.hpp
include/broadcaster/: UdpSimulationBroadcaster.hpp
include/collision/: BodyCollider.hpp
include/control/: ControlAltitude.hpp  ControlHeading.hpp  ControlHeadingRate.hpp  ControlLoadFactor.hpp  ControlLoop.hpp  ControlRoll.hpp  ControlVerticalSpeed.hpp  Derivative.hpp  DynamicFilterBlock.hpp  DynamicLimitBlock.hpp  Filter.hpp  Integrator.hpp  Limit.hpp  LimitElement.hpp  RateLimit.hpp  SISOBlock.hpp  SISOPIDFF.hpp  Unwrap.hpp
proto/: CMakeLists.txt  liteaerosim.proto
python/: FilterSS2_test_vector.ipynb  gx12_config.json  manual_input_demo.ipynb  pyproject.toml  terrain_demo_cad_west.ipynb
src/: Aircraft.cpp  CMakeLists.txt  DynamicBlock.cpp  KinematicState.cpp  numerics.cpp
src/Aerodynamics/: AeroPerformance.cpp
src/Airframe/: AirframePerformance.cpp
src/Control/: FilterFIR.cpp  FilterSS.cpp  FilterSS2.cpp  FilterTF.cpp  SISOBlock.cpp  SISOFilter.cpp  SISOLimit.cpp  Unwrap.cpp  control.cpp  filter_realizations.cpp
src/Math/: math_util.cpp
src/Navigation/: WGS84.cpp
src/aerodynamics/: AeroCoeffEstimator.cpp  AeroPerformance.cpp  LiftCurveModel.cpp  LoadFactorAllocator.cpp
src/airframe/: AirframePerformance.cpp  Inertia.cpp
src/broadcaster/: UdpSimulationBroadcaster.cpp
src/collision/: BodyCollider.cpp
src/control/: ControlAltitude.cpp  ControlHeading.cpp  ControlHeadingRate.cpp  ControlLoadFactor.cpp  ControlRoll.cpp  ControlVerticalSpeed.cpp
src/environment/: Atmosphere.cpp  Gust.cpp  LodSelector.cpp  MeshQualityVerifier.cpp  Terrain.cpp  TerrainCell.cpp  TerrainMesh.cpp  TerrainTile.cpp  Turbulence.cpp  Wind.cpp  tinygltf_impl.cpp
src/geodesy/: Egm2008Geoid.cpp  Wgs84.cpp
src/input/: JoystickInput.cpp  KeyboardInput.cpp  ScriptedInput.cpp
src/landing_gear/: ContactForces.cpp  LandingGear.cpp  StrutState.cpp  SurfaceFrictionUniform.cpp  WheelUnit.cpp
src/physics/: ContactForces.cpp
src/projection/: GodotEnuProjector.cpp
src/propulsion/: MotorElectric.cpp  MotorPiston.cpp  PropellerAero.cpp  PropulsionEDF.cpp  PropulsionJet.cpp  PropulsionProp.cpp
src/python/: CMakeLists.txt  bind_manual_input.cpp  bindings.cpp
src/runner/: SimRunner.cpp
src/sensor/: SensorAirData.cpp
test/: AeroCoeffEstimator_test.cpp  AeroPerformance_test.cpp  Aircraft_test.cpp  AirframePerformance_test.cpp  Atmosphere_test.cpp  BodyCollider_test.cpp  CMakeLists.txt  Egm2008Geoid_test.cpp  FilterFIR_test.cpp  FilterSS2Clip_test.cpp  FilterSS_test.cpp  FilterTF2_test.cpp  FilterTF_test.cpp  GeodesyWgs84_test.cpp  GodotEnuProjector_test.cpp  Gust_test.cpp  Inertia_test.cpp  JoystickInput_test.cpp  KeyboardInput_test.cpp  KinematicState_test.cpp  LandingGearTerrain_test.cpp  LandingGearTypes_test.cpp  LandingGear_test.cpp  LasTerrain_CrossLang_test.cpp  LiftCurveModel_test.cpp  LoadFactorAllocator_test.cpp  LodSelector_test.cpp  MeshQualityVerifier_test.cpp  Motor_test.cpp  PropellerAero_test.cpp  PropulsionEDF_test.cpp  PropulsionJet_test.cpp  PropulsionProp_test.cpp  ScriptedInput_test.cpp  SensorAirData_test.cpp  SimRunner_test.cpp  SimulationBroadcaster_test.cpp  SurfaceFriction_test.cpp  TerrainMesh_test.cpp  TerrainTile_test.cpp  (+3 more)
test/data/aircraft/: general_aviation.json  jet_trainer.json  small_uas.json
test/data/las_terrain/: py_written.las_terrain
tools/: CMakeLists.txt  README.md  joystick_verify.cpp  live_sim.cpp  mock_sim.cpp
(+81 files in other folders)
